feat: add auth modulo

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://admin:42926321@localhost:5432/connect-sphere?schema=public"
+SECRET_KEY=shuendjet5$256as7uasdh!@
